[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archery-battleship"
version = "0.0.1"
authors = [
  { name="Sander van Rijn", email="mail@svrijn.nl" },
]
description = "Simulation playtesting of 'battleship' as an archery game"
readme = "README.md"
license = { file="LICENSE" }
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["battleship"]
